--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hello Jenkins!!</h1>
     <p>I love to learn jenkins....</p>
+    <p>I am using ci/cd pipeline using continous deliver....</p>
 </body>
 </html>
