--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -9,5 +9,6 @@
     <h1>Hello Jenkins!!</h1>
     <p>I love to learn jenkins....</p>
     <p>I am using ci/cd pipeline using continous deliver....</p>
+    <p>nice work</p>
 </body>
 </html>
